[package]
name = "remu"
authors = ["QRWells"]
description = "A rust emulator for executable files."
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = "0.30"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"